# sweep-rs

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.test.tsx  App.tsx  api.ts  styles.css  styles.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  storage.rs
src-tauri/src/cleaner/: app_residue.rs  duplicates.rs  mod.rs  rules.rs  scanner.rs  trash.rs  types.rs
src-tauri/tests/: bundle_config.rs  cleaner_core.rs
src/lib/: categories.test.ts  categories.ts  format.test.ts  format.ts  polling.test.ts  polling.ts  reviewGroups.test.ts  reviewGroups.ts  reviewIndex.test.ts  reviewIndex.ts  selection.test.ts  selection.ts
