[package]
name = "sweep-rs"
version = "0.1.0"
description = "A local-first macOS cleaner"
authors = ["Sweep contributors"]
edition = "2021"

[lib]
name = "sweep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "2"
trash = "5"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

